# GridQuery

./: CMakeLists.txt  main.cpp
include/: ClassType.h  CodeBeauty.h  ComAlgorithm.h
ine_include/: INE.h  INEBeautyCode.h  INEClassType.h
ine_src/: INE.cpp  INEBeautyCode.cpp  INEClassType.cpp
src/: ClassType.cpp  CodeBeauty.cpp  ComAlgorithm.cpp
